neutron-tempest-iptables_hybrid job inherits from tempest-full-py3
Job neutron-tempest-iptables_hybrid was previously converted to
zuulv3 syntax but it inherited from devstack-tempest job.
It's better to inherit from proper job which already have configured
good "tox_envlist" and version of python which should be used.

Change-Id: I686386c48fabebb77813c4284f234f2ee3cb4024
Related-Bug: #1804844

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -242,7 +242,7 @@
 
 - job:
     name: neutron-tempest-iptables_hybrid
-    parent: devstack-tempest
+    parent: tempest-full-py3
     timeout: 10800
     required-projects:
       - openstack-infra/devstack-gate
@@ -250,9 +250,6 @@
       - openstack/tempest
     vars:
       tempest_concurrency: 4
-      tox_envlist: full
-      devstack_localrc:
-        USE_PYTHON3: true
       devstack_plugins:
         neutron: git://git.openstack.org/openstack/neutron.git
       devstack_services:
