[Configuration] Clean up .gitignore references to personal tools
Developers run all sorts of different tools within Git repositories,
any of which can leave their own special trashfiles all over the
place. We can't every hope to catalog them all, so better to
recommend developers simply configure a global core.excludesfile to
filter the irrelevant files which tend to get created by their
personal choice of tools.

To this end, remove the long-standing sections for "Mr Developer"
and "Editors" since their mere existence here sends the signal that
we welcome (and have time to review) additions for any old tool
someone ever might happen to try. Also add a comment block
explaining this, for clarity.

We can, and should of course, continue to list files created by the
tools recommended by our workflow (test frameworks called from tox,
documentation and packaging builds, et cetera).

Change-Id: I4774772ec30611b0acd1ad2aadcf6a1a3f93938c

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,67 @@
-AUTHORS
-build/*
-build-stamp
-ChangeLog
+# Add patterns in here to exclude files created by tools integrated with this
+# repository, such as test frameworks from the project's recommended workflow,
+# rendered documentation and package builds.
+#
+# Don't add patterns to exclude files created by preferred personal tools
+# (editors, IDEs, your operating system itself even). These should instead be
+# maintained outside the repository, for example in a ~/.gitignore file added
+# with:
+#
+# git config --global core.excludesfile '~/.gitignore'
+
+# Bytecompiled Python
+*.py[cod]
+
+# C extensions
+*.so
+
+# Packages
+*.egg*
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
 cover/
-covhtml/
-dist/
-doc/build
-doc/source/_static/config-samples/*.sample
-doc/source/_static/*.policy.yaml.sample
+.coverage*
+!.coveragerc
+.tox
+nosetests.xml
+.testrepository
+.stestr
+.venv
+
+# Translations
+*.mo
+
 etc/*.sample
 etc/neutron/plugins/ml2/*.sample
-*.DS_Store
-*.pyc
-neutron.egg-info/
-neutron/vcsversion.py
-neutron/versioninfo
-pbr*.egg/
-setuptools*.egg/
-*.log
-*.mo
-*.sw?
-*~
-/.*
-!/.coveragerc
-!/.gitignore
-!/.gitreview
-!/.mailmap
-!/.pylintrc
-!/.stestr.conf
-!/.zuul.yaml
-.stestr/
+
+# Complexity
+output/*.html
+output/*/index.html
+
+# Sphinx
+doc/build
+doc/source/_static/nova.conf.sample
+doc/source/_static/nova.policy.yaml.sample
+doc/source/_static/placement.policy.yaml.sample
+
+# pbr generates these
+AUTHORS
+ChangeLog
 
 # Files created by releasenotes build
 releasenotes/build
