Switch tempest-multinode-full to be run on python 3
This patch switches tempest-multinode-full to new
tempest-multinode-full-py3 job.

Depends-On: https://review.openstack.org/633982
Change-Id: Iaca3b2a58c44af4c7684caeaf241ba05ef67a70a

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -21,7 +21,7 @@
         - neutron-tempest-linuxbridge
         - neutron-grenade-multinode
         - neutron-grenade-dvr-multinode
-        - tempest-multinode-full:
+        - tempest-multinode-full-py3:
             voting: false
             # We don't run the job on things like neutron docs-only changes
             irrelevant-files: &tempest-irrelevant-files
