--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -47,7 +47,7 @@
         - tempest-full-py3:
             timeout: 10800
             irrelevant-files: *tempest-irrelevant-files
-        - tempest-slow:
+        - tempest-slow-py3:
             irrelevant-files: *tempest-irrelevant-files
         - networking-ovn-tempest-dsvm-ovs-release:
             voting: false
@@ -68,7 +68,7 @@
             timeout: 10800
         - tempest-full-py3:
             timeout: 10800
-        - tempest-slow:
+        - tempest-slow-py3:
             irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
