Switch multinode grenade jobs to python3
neutron-grenade stays on python 2 and we already have grenade-py3 job
for single node python 3

Change-Id: Idf99b9755598a7f3d9e8df9a0d936643a82381e5

--- a/playbooks/legacy/neutron-grenade-dvr-multinode/run.yaml
+++ b/playbooks/legacy/neutron-grenade-dvr-multinode/run.yaml
@@ -31,6 +31,7 @@
           export DEVSTACK_GATE_NEUTRON=1
           export DEVSTACK_GATE_CONFIGDRIVE=0
           export DEVSTACK_GATE_GRENADE=pullup
+          export DEVSTACK_GATE_USE_PYTHON3=True
           # Test DVR upgrade on multinode
           export PROJECTS="openstack-dev/grenade $PROJECTS"
           export DEVSTACK_GATE_NEUTRON_DVR=1
