--- a/playbooks/legacy/neutron-grenade-multinode/run.yaml
+++ b/playbooks/legacy/neutron-grenade-multinode/run.yaml
@@ -31,6 +31,7 @@
           export DEVSTACK_GATE_NEUTRON=1
           export DEVSTACK_GATE_CONFIGDRIVE=0
           export DEVSTACK_GATE_GRENADE=pullup
+          export DEVSTACK_GATE_USE_PYTHON3=True
           export PROJECTS="openstack-dev/grenade $PROJECTS"
           # Default to non DVR
           export DEVSTACK_GATE_NEUTRON_DVR=0
