Enhance rally-job for sec group rules to creates multiple rules
This commit makes use of recently merged functionality in rally
to create multiple security group rules per security group and list
them. This will help us identify API performance regressions with
respect to security group rules.

Change-Id: I92ac9785d2403c00b873e68f30062f9796b9ac8b

--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -377,6 +377,7 @@
             NeutronSecurityGroup.create_and_list_security_group_rules:
               security_group_args: {}
               security_group_rule_args: {}
+              security_group_rules_count: 20
           runner:
             constant:
               times: 50
