--- a/rally-jobs/task-neutron.yaml
+++ b/rally-jobs/task-neutron.yaml
@@ -288,7 +288,7 @@
     -
       title: Trunks related workload
       scenario:
-        NeutronTrunks.create_and_list_trunk_subports:
+        NeutronTrunks.create_and_list_trunks:
           subport_count: 125
       runner:
         constant:
