add python 3.7 unit test job
This is a mechanically generated patch to add a unit test job running
under Python 3.7.

See ML discussion here [1] for context.

[1] http://lists.openstack.org/pipermail/openstack-dev/2018-October/135626.html

Change-Id: If9bc2cf37a373415b477d0b2ac0d293916725c08

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -6,6 +6,7 @@
       - openstack-python-jobs
       - openstack-python35-jobs
       - openstack-python36-jobs
+      - openstack-python37-jobs
       - publish-openstack-docs-pti
       - periodic-stable-jobs
       - check-requirements
