Add method to tox to use local neutron-lib with unit tests
Change-Id: Ic96bb04cc3f9ed1438596b2150030ab22887b091

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ setenv = VIRTUAL_ENV={envdir}
          OS_STDOUT_CAPTURE={env:OS_STDOUT_CAPTURE:true}
          OS_STDERR_CAPTURE={env:OS_STDERR_CAPTURE:true}
          PYTHONWARNINGS=default::DeprecationWarning,ignore::DeprecationWarning:distutils,ignore::DeprecationWarning:site
-passenv = TRACE_FAILONLY GENERATE_HASHES http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
+passenv = TRACE_FAILONLY GENERATE_HASHES http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY TOX_ENV_SRC_MODULES
 usedevelop = True
 install_command =
   pip install {opts} {packages}
@@ -18,7 +18,10 @@ deps =
   -r{toxinidir}/requirements.txt
   -r{toxinidir}/test-requirements.txt
 whitelist_externals = sh
-commands = stestr run {posargs}
+commands =
+  {toxinidir}/tools/pip_install_src_modules.sh "{toxinidir}"
+  stestr run {posargs}
+
 # there is also secret magic in ostestr which lets you run in a fail only
 # mode. To do this define the TRACE_FAILONLY environmental variable.
 
