--- a/.pylintrc
+++ b/.pylintrc
@@ -85,7 +85,14 @@ disable=
  too-many-nested-blocks,
  too-many-public-methods,
  too-many-return-statements,
- too-many-statements
+ too-many-statements,
+# new for python3 version of pylint
+ chained-comparison,
+ consider-using-dict-comprehension,
+ consider-using-in,
+ consider-using-set-comprehension,
+ unnecessary-pass,
+ useless-object-inheritance
 
 [BASIC]
 # Variable names can be 1 to 31 characters long, with lowercase and underscores
