Add job from openstacksdk to avoid regressing
As seen in [0], openstacksdk uses a scenario for testing that isn't
currently covered by Neutron's own testing. Add a job from their stack
to be run on all patches, but make it non-voting to start with.

[0] https://bugs.launchpad.net/neutron/+bug/1816771

Change-Id: I35ba7664335026ca2a4d361d93fbf784bf0ffe5c
Related-Bug: 1816771
Related-Bug: 1817045

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -55,6 +55,8 @@
             irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
+        - openstacksdk-functional-devstack-networking:
+            voting: false
     gate:
       jobs:
         - neutron-functional
