Switch neutron-tempest-dvr-ha-multinode-full job to python3
It is last step to have all CI jobs from check and gate queues
to be run on Python 3.

Change-Id: I8275ff7d6346fb62aec16b022d27caaab96a5893

--- a/playbooks/legacy/neutron-tempest-dvr-ha-multinode-full/run.yaml
+++ b/playbooks/legacy/neutron-tempest-dvr-ha-multinode-full/run.yaml
@@ -48,6 +48,7 @@
           export DEVSTACK_GATE_NEUTRON=1
           export DEVSTACK_GATE_CONFIGDRIVE=0
           export DEVSTACK_GATE_TEMPEST_FULL=1
+          export DEVSTACK_GATE_USE_PYTHON3=True
           # Test DVR works multinode
           export DEVSTACK_GATE_NEUTRON_DVR=1
           export BRANCH_OVERRIDE=default
