Add oslo.privsep to config-generator list
We recently exposed the privsep opts for config generator use, so
projects that depend on oslo.privsep should include them in their
sample configs.

Change-Id: Ibaef2e2848855cd8ef987ec58457220911ad7c69

--- a/etc/oslo-config-generator/neutron.conf
+++ b/etc/oslo-config-generator/neutron.conf
@@ -10,6 +10,7 @@ namespace = nova.auth
 namespace = oslo.log
 namespace = oslo.db
 namespace = oslo.policy
+namespace = oslo.privsep
 namespace = oslo.concurrency
 namespace = oslo.messaging
 namespace = oslo.middleware.cors
