Support Network Segment Range CRUD as extensions
This patch adds the support for network segment range CRUD. Subsequent
patches will be added to use this network segment range on segment
allocation if this extension is loaded.

Changes include:
- an API extension which exposes the segment range to be administered;
- standard attributes with tagging support for the new resource;
- a new service plugin "network_segment_range" for the feature
  enabling/disabling;
- a new network segment range DB table model along with operation
  logic;
- Oslo Versioned Objects for network segment range data model;
- policy-in-code support for network segment range.

Co-authored-by: Allain Legacy <Allain.legacy@windriver.com>

Partially-implements: blueprint network-segment-range-management
Change-Id: I75814e50b2c9402fe6776229d469745d7a72290b

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ neutron.service_plugins =
     auto_allocate = neutron.services.auto_allocate.plugin:Plugin
     segments = neutron.services.segments.plugin:Plugin
     network_ip_availability = neutron.services.network_ip_availability.plugin:NetworkIPAvailabilityPlugin
+    network_segment_range = neutron.services.network_segment_range.plugin:NetworkSegmentRangePlugin
     revisions = neutron.services.revisions.revision_plugin:RevisionPlugin
     timestamp = neutron.services.timestamp.timestamp_plugin:TimeStampPlugin
     trunk = neutron.services.trunk.plugin:TrunkPlugin
@@ -196,6 +197,7 @@ neutron.objects =
     NetworkPortSecurity = neutron.objects.network:NetworkPortSecurity
     NetworkRBAC = neutron.objects.network:NetworkRBAC
     NetworkSegment = neutron.objects.network:NetworkSegment
+    NetworkSegmentRange = neutron.objects.network:NetworkSegmentRange
     Port = neutron.objects.ports:Port
     PortBinding = neutron.objects.ports:PortBinding
     PortBindingLevel = neutron.objects.ports:PortBindingLevel
