Switch neutron-functional-with-wsgi job to zuul v3 syntax
This patch removes also legacy playbooks used before by
this experimental job and it also removes
neutron/tests/contrib/post_test_hook.sh script as it was used
only by functional and fullstack tests and it's not used anymore.

Change-Id: Ibc48ce8e80e11dcbb13da121aa86bbf01b98a3d9
Related-Bug: #1804844

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -418,18 +418,10 @@
 
 - job:
     name: neutron-functional-with-uwsgi
-    parent: legacy-dsvm-base
-    run: playbooks/legacy/neutron-functional-with-uwsgi/run.yaml
-    post-run: playbooks/legacy/neutron-functional-with-uwsgi/post.yaml
-    timeout: 7800
-    required-projects:
-      - openstack-infra/devstack-gate
-      - openstack/neutron
-    irrelevant-files:
-      - ^.*\.rst$
-      - ^doc/.*$
-      - ^neutron/locale/.*$
-      - ^releasenotes/.*$
+    parent: neutron-functional
+    vars:
+      devstack_localrc:
+        NEUTRON_DEPLOY_MOD_WSGI: true
     voting: false
 
 - job:
