Replace openstack.org git:// URLs with https://
This is a mechanically generated change to replace openstack.org
git:// URLs with https:// equivalents.

This is in aid of a planned future move of the git hosting
infrastructure to a self-hosted instance of gitea (https://gitea.io),
which does not support the git wire protocol at this stage.

This update should result in no functional change.

For more information see the thread at

 http://lists.openstack.org/pipermail/openstack-discuss/2019-March/003825.html

Change-Id: I4c9b513eb65ec4c50bdb9a66dfcc676360bdaa28

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -328,7 +328,7 @@
     vars:
       tempest_concurrency: 4
       devstack_plugins:
-        neutron: git://git.openstack.org/openstack/neutron.git
+        neutron: https://git.openstack.org/openstack/neutron.git
       devstack_services:
         tls-proxy: false
         tempest: true
