Add enforcer logic for neutron policy
The oslopolicy-policy-generator command line tool does not run
currently, throwing a KeyError.  This is because a policy enforcer needs
to be added to Neutron for the command to run.

This change is a limited backport of "Convert policy.json into
policy-in-code" [1]. The feature of policy-in-code is not backported;
all that is backported is the changes needed for the
oslopolicy-policy-generator command line tool to function properly,
which were bundled in with the rest of the policy-in-code feature.

For reference, an analogous change was merged in keystone to solve the
same problem [2].

[1] https://review.openstack.org/585037
[2] https://review.openstack.org/530828

Change-Id: I912f23e9c6800b71672507c548cfab3f094de9c7
Closes-Bug: #1817953
(cherry picked from commit 96b0b90b89ceb8efe51f9b2270401cca2956079a)

--- a/setup.cfg
+++ b/setup.cfg
@@ -137,6 +137,8 @@ oslo.config.opts =
     nova.auth = neutron.opts:list_auth_opts
 oslo.config.opts.defaults =
     neutron = neutron.common.config:set_cors_middleware_defaults
+oslo.policy.enforcer =
+    neutron = neutron.policy:get_enforcer
 neutron.db.alembic_migrations =
     neutron = neutron.db.migration:alembic_migrations
 neutron.interface_drivers =
