Add "project_name" variable to configure_functional_tests role
It will be useful when neutron-functional or neutron-fullstack
job will be used in stadium projects like e.g. in neutron-fwaas.

Change-Id: I73c446d43e44b8f06c93752ebf98684f165e6fcd
Related-Bug: #1804844

--- a/roles/configure_functional_tests/defaults/main.yaml
+++ b/roles/configure_functional_tests/defaults/main.yaml
@@ -1,4 +1,5 @@
 tests_venv: "{{ tox_envlist }}"
+project_name: "neutron"
 base_dir: "{{ ansible_user_dir }}/src/opendev.org"
 gate_dest_dir: "{{ base_dir }}/openstack"
 devstack_dir: "{{ base_dir }}/openstack/devstack"
