Conntrack Helper - Plugin
Implements Conntrack Helper service plugin for conntrack
helper resources. Supports create, update and delete
conntrack helper for l3 routers.

A new configuration option:
  [l3-conntrack-helpers]/allowed_conntrack_helpers
introduced to allow the operator to configure CT
helpers, and the helper protocol constraints.

Related-Bug: #1823633
Depends-On: https://review.opendev.org/663446
Change-Id: I58193955261f50b18b1946261fe662da6b20f0f5

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ neutron.service_plugins =
     log = neutron.services.logapi.logging_plugin:LoggingPlugin
     port_forwarding = neutron.services.portforwarding.pf_plugin:PortForwardingPlugin
     placement = neutron.services.placement_report.plugin:PlacementReportPlugin
+    conntrack_helper = neutron.services.conntrack_helper.plugin:Plugin
 neutron.ml2.type_drivers =
     flat = neutron.plugins.ml2.drivers.type_flat:FlatTypeDriver
     local = neutron.plugins.ml2.drivers.type_local:LocalTypeDriver
