--- a/playbooks/legacy/neutron-tempest-dvr-ha-multinode-full/run.yaml
+++ b/playbooks/legacy/neutron-tempest-dvr-ha-multinode-full/run.yaml
@@ -50,6 +50,7 @@
           export DEVSTACK_GATE_TEMPEST_FULL=1
           # Test DVR works multinode
           export DEVSTACK_GATE_NEUTRON_DVR=1
+          export DEVSTACK_GATE_TEMPEST_REGEX="'(^tempest\.scenario.*)|(?!.*\[.*\bslow\b.*\])(^tempest\.api)' --blacklist-file=/opt/stack/new/neutron/neutron/tests/contrib/tempest_blacklist.txt"
           export BRANCH_OVERRIDE=default
           if [ "$BRANCH_OVERRIDE" != "default" ] ; then
               export OVERRIDE_ZUUL_BRANCH=$BRANCH_OVERRIDE
