Agent - Conntrack Helper
Implements the L3 agent conntrack helper extension.

Closes: #1823633
Change-Id: I21cc5683839bbb3fb8a649908080919c1557811d

--- a/setup.cfg
+++ b/setup.cfg
@@ -118,6 +118,7 @@ neutron.agent.l3.extensions =
     gateway_ip_qos = neutron.agent.l3.extensions.qos.gateway_ip:RouterGatewayIPQosAgentExtension
     port_forwarding = neutron.agent.l3.extensions.port_forwarding:PortForwardingAgentExtension
     snat_log = neutron.agent.l3.extensions.snat_log:SNATLoggingExtension
+    conntrack_helper = neutron.agent.l3.extensions.conntrack_helper:ConntrackHelperAgentExtension
 neutron.services.logapi.drivers =
     ovs = neutron.services.logapi.drivers.openvswitch.ovs_firewall_log:OVSFirewallLoggingDriver
 neutron.qos.agent_drivers =
