--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -56,6 +56,10 @@
             irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
+            # TODO(slaweq): switch it again to voting after bug
+            # https://bugs.launchpad.net/devstack/+bug/1820892
+            # will be fixed
+            voting: false
         - openstacksdk-functional-devstack-networking:
             voting: false
     gate:
@@ -72,17 +76,23 @@
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
         - neutron-tempest-iptables_hybrid
-        - neutron-grenade-multinode
-        - neutron-grenade-dvr-multinode
-        - neutron-grenade
+        # TODO(slaweq): bring back grenade jobs after bug
+        # https://bugs.launchpad.net/devstack/+bug/1820892
+        # will be fixed
+        #- neutron-grenade-multinode
+        #- neutron-grenade-dvr-multinode
+        #- neutron-grenade
         - tempest-full:
             timeout: 10800
         - tempest-full-py3:
             timeout: 10800
         - tempest-slow-py3:
             irrelevant-files: *tempest-irrelevant-files
-        - grenade-py3:
-            irrelevant-files: *tempest-irrelevant-files
+        # TODO(slaweq): bring back grenade jobs after bug
+        # https://bugs.launchpad.net/devstack/+bug/1820892
+        # will be fixed
+        #- grenade-py3:
+        #    irrelevant-files: *tempest-irrelevant-files
     periodic:
       jobs:
         - neutron-functional
@@ -234,6 +244,10 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     irrelevant-files: *tempest-irrelevant-files
+    # TODO(slaweq): switch it again to voting after bug
+    # https://bugs.launchpad.net/devstack/+bug/1820892
+    # will be fixed
+    voting: false
 
 - job:
     name: neutron-grenade-dvr-multinode
@@ -246,6 +260,10 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     irrelevant-files: *tempest-irrelevant-files
+    # TODO(slaweq): switch it again to voting after bug
+    # https://bugs.launchpad.net/devstack/+bug/1820892
+    # will be fixed
+    voting: false
 
 - job:
     name: neutron-tempest-dvr-ha-multinode-full
@@ -390,6 +408,10 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     irrelevant-files: *tempest-irrelevant-files
+    # TODO(slaweq): switch it again to voting after bug
+    # https://bugs.launchpad.net/devstack/+bug/1820892
+    # will be fixed
+    voting: false
 
 - job:
     name: neutron-tempest-postgres-full
