Add a midonet non-voting job
Ref: http://lists.openstack.org/pipermail/openstack-dev/2018-September/135273.html

Change-Id: I4f10b3384ce1016c5117e5af7c91345624e3c07b

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -54,6 +54,9 @@
         - networking-ovn-tempest-dsvm-ovs-release:
             voting: false
             irrelevant-files: *tempest-irrelevant-files
+        - networking-midonet-tempest-aio-ml2-centos-7:
+            voting: false
+            irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
             # TODO(slaweq): switch it again to voting after bug
