Revert "Switch all grenade jobs to be non voting and non gating temporary"
This reverts commit 13a2f70024e9a35c0ffc3142a23d9381d7c64d10.

Related bug is fixed so we can switch grenade jobs to be voting again.

Change-Id: I027208171a85ea7f2ce8b61d46121f507e826a34
Related-bug: #1820892

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -56,10 +56,6 @@
             irrelevant-files: *tempest-irrelevant-files
         - grenade-py3:
             irrelevant-files: *tempest-irrelevant-files
-            # TODO(slaweq): switch it again to voting after bug
-            # https://bugs.launchpad.net/devstack/+bug/1820892
-            # will be fixed
-            voting: false
         - openstacksdk-functional-devstack-networking:
             voting: false
     gate:
@@ -76,23 +72,17 @@
         - neutron-tempest-dvr
         - neutron-tempest-linuxbridge
         - neutron-tempest-iptables_hybrid
-        # TODO(slaweq): bring back grenade jobs after bug
-        # https://bugs.launchpad.net/devstack/+bug/1820892
-        # will be fixed
-        #- neutron-grenade-multinode
-        #- neutron-grenade-dvr-multinode
-        #- neutron-grenade
+        - neutron-grenade-multinode
+        - neutron-grenade-dvr-multinode
+        - neutron-grenade
         - tempest-full:
             timeout: 10800
         - tempest-full-py3:
             timeout: 10800
         - tempest-slow-py3:
             irrelevant-files: *tempest-irrelevant-files
-        # TODO(slaweq): bring back grenade jobs after bug
-        # https://bugs.launchpad.net/devstack/+bug/1820892
-        # will be fixed
-        #- grenade-py3:
-        #    irrelevant-files: *tempest-irrelevant-files
+        - grenade-py3:
+            irrelevant-files: *tempest-irrelevant-files
     periodic:
       jobs:
         - neutron-functional
@@ -244,10 +234,6 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     irrelevant-files: *tempest-irrelevant-files
-    # TODO(slaweq): switch it again to voting after bug
-    # https://bugs.launchpad.net/devstack/+bug/1820892
-    # will be fixed
-    voting: false
 
 - job:
     name: neutron-grenade-dvr-multinode
@@ -260,10 +246,6 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     irrelevant-files: *tempest-irrelevant-files
-    # TODO(slaweq): switch it again to voting after bug
-    # https://bugs.launchpad.net/devstack/+bug/1820892
-    # will be fixed
-    voting: false
 
 - job:
     name: neutron-tempest-dvr-ha-multinode-full
@@ -408,10 +390,6 @@
       - openstack-infra/devstack-gate
       - openstack/neutron
     irrelevant-files: *tempest-irrelevant-files
-    # TODO(slaweq): switch it again to voting after bug
-    # https://bugs.launchpad.net/devstack/+bug/1820892
-    # will be fixed
-    voting: false
 
 - job:
     name: neutron-tempest-postgres-full
