DVR: Modify DVR flows to allow ARP requests to hit ARP Responder table
DVR does the ARP table update through the control plane, and does not
allow any ARP requests to get out of the node.

In order to address the allowed address pair VRRP IP issue with DVR,
we need to add an ARP entry into the ARP Responder table for the
allowed address pair IP ( which is taken care by the patch in [1])

This patch adds a rule in the br-int to redirect the packet
destinated to the router to the actual router-port and also moves
the arp filtering rule to the tunnel or the physical port based on the
configuration.

By adding the above rule it allows the ARP requests to reach the
ARP Responder table and filters the ARP requests before it reaches
the physical network or the tunnel.

[1] https://review.opendev.org/#/c/601336/
Related-Bug: #1774459

Change-Id: I3905ea56ca0ff35bdd96c818719e6d63a3eb5a72
(cherry picked from commit 52b537ca22b2d7d81a84b2f75de577d8dffee94c)

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -271,6 +271,7 @@
               enable_distributed_routing: True
               l2_population: True
               tunnel_types: vxlan
+              arp_responder: True
             ovs:
               tunnel_bridge: br-tun
               bridge_mappings: public:br-ex
@@ -301,6 +302,7 @@
                 enable_distributed_routing: True
                 l2_population: True
                 tunnel_types: vxlan
+                arp_responder: True
               ovs:
                 tunnel_bridge: br-tun
                 bridge_mappings: public:br-ex
@@ -348,6 +350,7 @@
               enable_distributed_routing: True
               l2_population: True
               tunnel_types: vxlan,gre
+              arp_responder: True
             securitygroup:
               firewall_driver: iptables_hybrid
           $NEUTRON_L3_CONF:
